--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./dist/css/styles.min.css">
+    <script src="./dist/js/project.min.js" defer></script>
 </head>
 <body>
     
